# media-manager

./: .gitattributes  .gitignore  .pre-commit-config.yaml  API_MEDIA_GROUPS_BLOCK1A.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HOTFIX_README.md  Makefile  NEXT_STEPS.md  README.md  README.txt  SECURITY.md  SUPPORT.md  _APPLY_THESE_FILES_INTO_YOUR_REPO.txt  _diag_date.py  apply_hotfix.py  apply_manual_page_index_fix.ps1  apply_summary_fix.ps1  apply_visible_duplicate_page_upgrade.ps1  fix_cli_duplicates_inspect_compat_v4.patch  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  python-tests.yml  tests.yml
desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.css  App.tsx  index.css  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs
desktop/src/lib/: api-cache.ts  error-tracker.ts  error-utils.ts  favorites-store.ts  i18n.ts  preflight-guard.ts  progress-context.tsx  safe-asset.ts  tauri-bridge.ts  toast.ts  use-first-run-hint.ts  use-real-progress.ts  use-simulated-progress.ts
desktop/src/pages/: AboutPage.tsx  DashboardPage.tsx  DuplicatesPage.tsx  FaceTimelinePage.tsx  HistoryPage.tsx  LibraryPage.tsx  OnboardingPage.tsx  OrganizePage.tsx  PeoplePage.tsx  RenamePage.tsx  ReviewWorkbenchPage.tsx  RunDetailPage.tsx  SettingsPage.tsx  TripPage.tsx  WorkflowRunnerPage.tsx
desktop/src/stores/: dashboard-store.ts  duplicates-store.ts  index.ts  organize-store.ts  progress-store.ts  review-store.ts  settings-store.ts
desktop/src/types/: duplicates.ts  index.ts  organizer.ts  progress.ts  review.ts  run.ts  scanner.ts  settings.ts
docs/: 45_sorting_stage_foundation.md  46_full_guided_product_experience_spec.md  47_duplicate_comparison_and_associated_files_spec.md  48_state_resume_and_manual_tools_spec.md  49_rename_stage_foundation.md  50_dry_run_and_execution_core.md  51_dry_run_state_contract.md  52_execution_preview_core.md  54_duplicate_startup_selftest.md  55_duplicate_execution_runner.md  57_duplicate_session_store.md  58_duplicate_cli_workflow.md  59_associated_file_grouping_foundation.md  60_execution_safety_wiring.md  61_duplicate_delete_to_trash.md  62_duplicate_execution_audit_log.md  63_stale_preflight_protection.md  65_exact_duplicate_feature_state.md  66_duplicate_cli_row_output.md  67_qml_workflow_recovery.md  IDEAS.md  architecture.md  cleanup-workflow-v1.md  cleanup-workflow-v2.md  cli-workflows.md  cli.md  date-metadata-decision-policy-hardening-v3.md  date-resolution-hardening-v1.md  date-resolution.md  desktop-review-safety.md  duplicate-engine-hardening-v2.md  duplicate-execution-hardening-v2.md  duplicate-format-coverage-v1.md  duplicate-reporting-session-hardening-v1.md  duplicate-review-audit-v1.md  duplicate-session-state-v1.md  duplicate-similar-review-hardening-v2.md  duplicate-workflow-diagnostics-hardening-v2.md  execution-journal-v1.md  full_workflow_product_spec.md  (+47 more)
docs/archive/: DESIGN_MEDIA_GROUPS_V1.md  IMPLEMENTATION_MEDIA_GROUPS_BLOCK1.md
docs/examples/people/: README.md  people-report.json  people-review-workflow.json  people-review-workspace.json
docs/protocol/: 2026-03-25-v0.3-pyside6-multisource.md  2026-03-25-v0.3.1-organizer-gui-polish.md  2026-03-25-v0.3.2-app-shell-and-readability.md  2026-03-25-v0.3.3-processing-feedback-and-table-sizing.md  2026-03-25-v0.3.4-import-sets.md  2026-03-25-v0.3.5-rename-baseline.md
docs/transition/: legacy-reset.md
handoff/: fix-history-summary-by-command.md  workflow_history_summary_by_command_changes.md
legacy/: README.md  manifest.md
notes/: qml-duplicate-detail-fix.txt  qml_duplicate_detail_integration.md
scripts/completions/: media-manager.bash
snippets/: history_summary_by_command_block.py.txt
src/: sitecustomize.py
src/media_manager/: __init__.py  __main__.py  associated_files.py  bridge_autotag.py  bridge_background.py  bridge_base.py  bridge_deep_meta.py  bridge_diagnostics.py  bridge_doctor.py  bridge_duplicates_apply.py  bridge_duplicates_preview.py  bridge_enrich.py  bridge_file_ops.py  bridge_groups.py  bridge_health.py  bridge_history.py  bridge_library.py  bridge_magic.py  bridge_organize_apply.py  bridge_organize_preview.py  bridge_people.py  bridge_rename.py  bridge_review.py  bridge_search.py  bridge_settings.py  bridge_similar_preview.py  bridge_smart_albums.py  bridge_stats.py  bridge_trip.py  bridge_undo.py  cleanup_plan.py  cli.py  cli_app.py  cli_app_services.py  cli_cleanup.py  cli_completions.py  cli_config.py  cli_doctor.py  cli_duplicates.py  cli_export.py  (+49 more)
src/media_manager/core/: README.md  __init__.py  action_model.py  app_contract_inventory.py  app_manifest.py  app_profiles.py  app_services.py  app_startup.py  auto_tagger.py  cli_progress.py  doctor.py  duplicate_decisions.py  (+462 more)
tests/: conftest.py  test_app_contract_inventory.py  test_app_services_v1.py  test_app_startup_v1.py  test_associated_files.py  test_bridge_base.py  test_bridge_diagnostics.py  test_bridge_doctor.py  test_bridge_duplicates_apply.py  test_bridge_duplicates_preview.py  test_bridge_file_ops.py  test_bridge_history.py  test_bridge_library.py  test_bridge_organize_apply.py  test_bridge_organize_preview.py  test_bridge_people.py  test_bridge_rename.py  test_bridge_review.py  test_bridge_search.py  test_bridge_settings.py  test_bridge_similar_preview.py  test_bridge_stats.py  test_bridge_trip.py  test_bridge_undo.py  test_cleanup_execution_plan.py  test_cleanup_plan.py  test_cli_app_action_model_v1.py  test_cli_app_manifest_v1.py  test_cli_app_plan_snapshot_v1.py  test_cli_app_profiles_v1.py  test_cli_app_services_desktop_runtime_v1.py  test_cli_app_services_extended_v1.py  test_cli_app_services_ui_view_models_v1.py  test_cli_app_services_v1.py  test_cli_cleanup_v1.py  test_cli_config.py  test_cli_doctor_v1.py  test_cli_duplicates.py  test_cli_duplicates_apply_parity_v3.py  test_cli_duplicates_audio_coverage_v3.py  (+484 more)
(+119 files in other folders)
