[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "media-manager"
version = "0.6.0"
description = "Core-first media manager with CLI foundation and guarded GUI entry points"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Manuel" }
]
license = { text = "MIT" }
keywords = ["media", "photos", "videos", "organizer", "exiftool", "cli"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Utilities",
]
dependencies = [
  "send2trash>=1.8",
  "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
gui = [
  "PySide6>=6.10",
]
gui-qt = [
  "PySide6>=6.10",
]
people = [
  "opencv-python>=4.9",
  "numpy>=1.26",
  "face-recognition-models>=0.3.0",
  "dlib-bin>=20.0.1; platform_system == 'Windows' and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
]
people-opencv = [
  "opencv-python>=4.9",
]
people-dlib = [
  "numpy>=1.26",
  "face-recognition-models>=0.3.0",
  "dlib-bin>=20.0.1; platform_system == 'Windows' and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
  "dlib>=19.24; platform_system != 'Windows'",
]
people-face-recognition = [
  "numpy>=1.26",
  "face-recognition-models>=0.3.0",
  "dlib-bin>=20.0.1; platform_system == 'Windows' and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
  "dlib>=19.24; platform_system != 'Windows'",
]

[project.scripts]
media-manager = "media_manager.cli:main"
media-manager-app = "media_manager.cli_app:main"
media-manager-app-services = "media_manager.cli_app_services:main"
media-manager-cleanup = "media_manager.cli_cleanup:main"
media-manager-duplicates = "media_manager.cli_duplicates:main"
media-manager-doctor = "media_manager.cli_doctor:main"
media-manager-gui = "media_manager.gui_app:main"
media-manager-inspect = "media_manager.cli_inspect:main"
media-manager-organize = "media_manager.cli_organize:main"
media-manager-people = "media_manager.cli_people:main"
media-manager-people-session = "media_manager.cli_people_session:main"
media-manager-rename = "media_manager.cli_rename:main"
media-manager-runs = "media_manager.cli_runs:main"
media-manager-trip = "media_manager.cli_trip:main"
media-manager-undo = "media_manager.cli_undo:main"
media-manager-workflow = "media_manager.cli_workflow:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
